# dscovermidi

./: MANIFEST.in  README.md  pyproject.toml
discovermidi/: README.md
