[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discovermidi"
version = "25.12.19"
description = "Ultimate MIDI dataset for MIDI music discovery and symbolic music AI purposes"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Alex Lev", email = "alexlev61@proton.me" }
]
maintainers = [
  { name = "Alex Lev", email = "alexlev61@proton.me" }
]
dependencies = [
  "tqdm",
  "ipywidgets",
  "matplotlib",
  "numpy==1.24.4",
  "hf-transfer",
  "huggingface_hub",
  "torch",
  "midirenderer"
]
keywords = ["MIDI", "music", "music AI", "MIDI dataset", "music dataset", "MIR", "music discovery", "music search", "MIDI search"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Multimedia :: Sound/Audio :: MIDI",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.6"

[project.readme]
file = "discovermidi/README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/asigalov61/discovermidi"
SoundCloud = "https://soundcloud.com/aleksandr-sigalov-61/"
Documentation = "https://github.com/asigalov61/discovermidi"
Issues = "https://github.com/asigalov61/discovermidi/issues"
Discussions = "https://github.com/asigalov61/discovermidi/discussions"
Dataset = "https://huggingface.co/datasets/projectlosangeles/Discover-MIDI-Dataset"